@@ -25,6 +25,7 @@ NEW: [features/improvements]
 +Report number of files searched when doing a Find in Files
 +Improve performance of Find All.
 +Add ability to filter file type to Find in Files
++Add commandline option to run Editra in the hotshot profiler
 
 BUG FIXES:
 +Middle click closes the tab that was clicked on and not the active tab
